Fix connecting to org.freedesktop.DBus.ObjectManager InterfacesAdded

The metatype also needs to be qRegisterMetaType'd in addition to
qDBusRegisterMetaType and Q_DECLARE_METATYPE.

I still don't know why it worked in plasmawindowed though…

BUG: 477633